--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,7 +1,7 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
     <external-files-path
         name="my_images"
-        path="Android/data/app.kbbqreview/files/Pictures"/>
+        path="Android/data/com.example.kbbqreview/files/Pictures"/>
     <external-files-path
         name="my_debug_images"
         path="/storage/emulated/0/Android/data/app.kbbqreview/files/Pictures/"/>
